--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,7 @@
     "angular-animate": "1.3.0",
     "angular-touch": "1.3.0",
     "angular-route": "1.3.0",
-    "bourbon": "3.2.4",
-    "bootstrap-sass": "3.3.3"
+    "bourbon": "3.2.4"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0",
